--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13138,5 +13138,8 @@ footer p {
 .advSecLogo {
   height: 82px;
 }
+.fees{
+  margin: 6px 90px 8px 318px;
+}
 
 /*# sourceMappingURL=style.css.map */
